--- a/Project.toml
+++ b/Project.toml
@@ -2,3 +2,6 @@ name = "FastmathOverlay"
 uuid = "32340bd4-0178-4ab8-8fce-9b94bc594446"
 authors = ["Valentin Churavy <v.churavy@gmail.com>"]
 version = "0.1.0"
+
+[compat]
+julia = "1.6"
